Update using isBlank instead of isEMpty